--- a/work.html
+++ b/work.html
@@ -4,49 +4,35 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work · Jan Arroyo</title>
-  <!-- keep your global css if you want nav/containers to look the same -->
+  <!-- keep your global file for nav/base if you use it -->
   <link href="styles.css" rel="stylesheet" />
 
   <!-- Work-page-only styles -->
   <style>
-    /* layout helpers in case container isn't defined globally */
-    .container{max-width:980px;margin:0 auto;padding:0 16px;}
+    /* container fallback (in case your global doesn't define it) */
+    .container{max-width:960px;margin:0 auto;padding:0 16px;}
 
-    /* ——— List-style Work page ——— */
-    .page-title{font-size:22px;margin:22px 0 12px;}
-    .worklist{list-style:none;padding:0;margin:10px 0 0;}
-    .workrow{
-      display:flex;align-items:center;justify-content:space-between;gap:14px;
-      padding:12px 14px;border:1px solid rgba(17,19,24,.08);
-      border-radius:14px;background:#fff;margin-bottom:10px;
-      transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;
+    .page-title{font-size:22px;margin:28px 0 14px;}
+
+    /* --- clean list with dotted separators --- */
+    .list{margin:8px 0 0;padding:0;list-style:none;}
+    .row{
+      display:flex;align-items:center;justify-content:space-between;gap:16px;
+      padding:12px 0;border-bottom:1px dashed rgba(17,19,24,.18);
+      text-decoration:none;color:inherit;
     }
-    .workrow:hover{transform:translateY(-1px);box-shadow:0 10px 26px rgba(17,19,24,.05);border-color:rgba(17,19,24,.14);}
-    .workrow .left{display:flex;align-items:center;gap:12px;text-decoration:none;color:inherit;}
-    .workrow .logo{width:28px;height:28px;border-radius:8px;object-fit:contain;background:#f3f4f6;flex:0 0 28px;}
-    .workrow .meta{display:flex;flex-direction:column;}
-    .workrow .co{font-weight:600;line-height:1.1;}
-    .workrow .role{font-size:13px;color:#60646c;}
-    .workrow .right{margin-left:auto;color:#7a7f87;font-size:13px;}
-    @media (max-width:640px){
-      .workrow{padding:12px;}
-      .workrow .right{font-size:12px;}
+    .row:focus-visible{outline:2px solid rgba(59,130,246,.5);outline-offset:4px;border-bottom-color:transparent;}
+    .left{display:flex;align-items:center;gap:12px;min-width:0;}
+    .logo{width:24px;height:24px;border-radius:6px;object-fit:contain;background:#f3f4f6;flex:0 0 24px;}
+    .meta{display:flex;align-items:center;gap:10px;min-width:0;}
+    .co{font-weight:600;white-space:nowrap;}
+    .role{color:#6b7280;font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+    .right{color:#7a7f87;font-size:13px;white-space:nowrap;margin-left:auto;}
+    @media (max-width:560px){
+      .role{display:none;}
     }
 
-    /* ——— Simple project spotlight cards (optional) ——— */
-    .spot-grid{
-      display:grid;gap:16px;margin-top:10px;
-      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-    }
-    .spot-card{
-      display:block;background:#fff;border:1px solid rgba(17,19,24,.10);
-      border-radius:16px;overflow:hidden;box-shadow:0 10px 30px rgba(17,19,24,.04);
-      transition:transform .15s ease, box-shadow .15s ease;text-decoration:none;color:inherit;
-    }
-    .spot-card:hover{transform:translateY(-2px);box-shadow:0 14px 34px rgba(17,19,24,.06);}
-    .spot-thumb{width:100%;height:160px;object-fit:cover;display:block;}
-    .spot-card h3{margin:10px 12px 4px;font-size:16px;}
-    .spot-card p{margin:0 12px 12px;color:#60646c;font-size:14px;}
+    /* small spacing for footer */
     footer .container{padding:24px 0;color:#7a7f87;font-size:14px;}
   </style>
 </head>
@@ -65,114 +51,82 @@
   </nav>
 
   <main class="container">
-    <!-- WORK LIST -->
     <h1 class="page-title">Work</h1>
-
-    <ul class="worklist" aria-label="Work experience">
-      <li class="workrow">
-        <a class="left" href="decks/amazon-chatbot.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/amazon.svg" alt="">
-          <div class="meta">
-            <div class="co">Amazon</div>
-            <div class="role">Technical Program Manager Intern</div>
-          </div>
+    <ul class="list" aria-label="Work experience">
+      <li>
+        <a class="row" href="https://www.amazon.jobs/content/en/teams/devices-and-services/lab126" target="_blank" rel="noopener" aria-label="Amazon">
+          <span class="left">
+            <img class="logo" src="images/logos/amazon.svg" alt="">
+            <span class="meta">
+              <span class="co">Amazon</span>
+              <span class="role">Technical Program Manager Intern</span>
+            </span>
+          </span>
+          <span class="right">2025</span>
         </a>
-        <div class="right">May 2025–Aug 2025</div>
       </li>
 
-      <li class="workrow">
-        <a class="left" href="decks/accenture-dashboard.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/accenture.svg" alt="">
-          <div class="meta">
-            <div class="co">Accenture</div>
-            <div class="role">Strategy Tech Apps & Dev Analyst Intern</div>
-          </div>
+      <li>
+        <a class="row" href="https://www.accenture.com/us-en/services/ecosystem-partners/microsoft" target="_blank" rel="noopener" aria-label="Accenture">
+          <span class="left">
+            <img class="logo" src="images/logos/accenture.svg" alt="">
+            <span class="meta">
+              <span class="co">Accenture</span>
+              <span class="role">Strategy Tech Apps &amp; Dev Analyst Intern</span>
+            </span>
+          </span>
+          <span class="right">2024</span>
         </a>
-        <div class="right">Jun 2024–Aug 2024</div>
       </li>
 
-      <li class="workrow">
-        <a class="left" href="decks/microsoft-initiatives.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/microsoft.svg" alt="">
-          <div class="meta">
-            <div class="co">Microsoft</div>
-            <div class="role">Finance Data Analyst Intern</div>
-          </div>
+      <li>
+        <a class="row" href="https://www.microsoft.com/en-us/modernfinance/digitaltransformation.aspx" target="_blank" rel="noopener" aria-label="Microsoft">
+          <span class="left">
+            <img class="logo" src="images/logos/microsoft.svg" alt="">
+            <span class="meta">
+              <span class="co">Microsoft</span>
+              <span class="role">Finance Data Analyst Intern</span>
+            </span>
+          </span>
+          <span class="right">2023</span>
         </a>
-        <div class="right">May 2023–Aug 2023</div>
-      </li>
-
-      <li class="workrow">
-        <a class="left" href="decks/quokka.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/quokka.svg" alt="">
-          <div class="meta">
-            <div class="co">Quokka Brew</div>
-            <div class="role">Project Manager</div>
-          </div>
-        </a>
-        <div class="right">Dec 2023–Apr 2024</div>
       </li>
     </ul>
 
-    <!-- INVOLVEMENTS LIST -->
     <h2 class="page-title" style="margin-top:28px;">Involvements</h2>
-
-    <ul class="worklist" aria-label="Leadership & involvement">
-      <li class="workrow">
-        <a class="left" href="decks/btg-crm.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/usc.svg" alt="">
-          <div class="meta">
-            <div class="co">Business Technology Group (USC)</div>
-            <div class="role">VP of Projects</div>
-          </div>
+    <ul class="list" aria-label="Involvements">
+      <li>
+        <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group">
+          <span class="left">
+            <img class="logo" src="images/logos/usc.svg" alt="">
+            <span class="meta">
+              <span class="co">Business Technology Group</span>
+              <span class="role">VP of Projects</span>
+            </span>
+          </span>
+          <span class="right">2024–Present</span>
         </a>
-        <div class="right">Apr 2024–Present</div>
       </li>
 
-      <li class="workrow">
-        <a class="left" href="decks/ey-education.pdf" target="_blank" rel="noopener">
-          <img class="logo" src="images/logos/ey.svg" alt="">
-          <div class="meta">
-            <div class="co">Ernst &amp; Young</div>
-            <div class="role">Education Strategy Consultant</div>
-          </div>
+      <li>
+        <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
+          <span class="left">
+            <img class="logo" src="images/logos/ey.svg" alt="">
+            <span class="meta">
+              <span class="co">EY CMAP</span>
+              <span class="role">Education Strategy Consultant</span>
+            </span>
+          </span>
+          <span class="right">2023–Present</span>
         </a>
-        <div class="right">Aug 2023–Present</div>
       </li>
     </ul>
-
-    <!-- OPTIONAL: project spotlight (simple) -->
-    <h2 class="page-title" style="margin-top:36px;">Project Spotlight</h2>
-    <div class="spot-grid">
-      <a class="spot-card" href="decks/amazon-chatbot.pdf" target="_blank" rel="noopener">
-        <img class="spot-thumb" src="images/spotlight/chatbot.jpg" alt="">
-        <h3>Lens DB LLM Chatbot</h3>
-        <p>80% faster retrieval & analysis.</p>
-      </a>
-      <a class="spot-card" href="decks/accenture-dashboard.pdf" target="_blank" rel="noopener">
-        <img class="spot-thumb" src="images/spotlight/dashboard.jpg" alt="">
-        <h3>Metrics Dashboard</h3>
-        <p>Developer efficiency +20%, visibility +83%.</p>
-      </a>
-      <a class="spot-card" href="decks/ey-case.pdf" target="_blank" rel="noopener">
-        <img class="spot-thumb" src="images/spotlight/ey.jpg" alt="">
-        <h3>EY Case – 1st Place</h3>
-        <p>+25% revenue, $100k funding plan.</p>
-      </a>
-      <a class="spot-card" href="decks/quokka.pdf" target="_blank" rel="noopener">
-        <img class="spot-thumb" src="images/spotlight/quokka.jpg" alt="">
-        <h3>Quokka Brew Redesign</h3>
-        <p>85% increase in shelf recognition.</p>
-      </a>
-    </div>
   </main>
 
   <footer>
-    <div class="container">© <span id="y2"></span> Jan Arroyo</div>
+    <div class="container">© <span id="y"></span> Jan Arroyo</div>
   </footer>
 
-  <script>
-    document.getElementById('y2').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
