--- a/work.html
+++ b/work.html
@@ -4,17 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work · Jan Arroyo</title>
-  <!-- keep your global file for nav/base if you use it -->
   <link href="styles.css" rel="stylesheet" />
 
-  <!-- Work-page-only styles -->
+  <!-- Work-page-only styles (kept local per your request) -->
   <style>
-    /* container fallback (in case your global doesn't define it) */
     .container{max-width:960px;margin:0 auto;padding:0 16px;}
-
     .page-title{font-size:22px;margin:28px 0 14px;}
-
-    /* --- clean list with dotted separators --- */
+    /* clean list with dotted separators + full-row links */
     .list{margin:8px 0 0;padding:0;list-style:none;}
     .row{
       display:flex;align-items:center;justify-content:space-between;gap:16px;
@@ -28,11 +24,7 @@
     .co{font-weight:600;white-space:nowrap;}
     .role{color:#6b7280;font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
     .right{color:#7a7f87;font-size:13px;white-space:nowrap;margin-left:auto;}
-    @media (max-width:560px){
-      .role{display:none;}
-    }
-
-    /* small spacing for footer */
+    @media (max-width:560px){ .role{display:none;} }
     footer .container{padding:24px 0;color:#7a7f87;font-size:14px;}
   </style>
 </head>
@@ -51,8 +43,23 @@
   </nav>
 
   <main class="container">
+    <!-- WORK -->
     <h1 class="page-title">Work</h1>
     <ul class="list" aria-label="Work experience">
+      <!-- New: USC Marshall PCA Tech (no link provided yet; add when you have one) -->
+      <li>
+        <a class="row" href="#" aria-label="USC Marshall Peer Career Advisor Tech">
+          <span class="left">
+            <img class="logo" src="images/logos/usc-marshall.svg" alt="">
+            <span class="meta">
+              <span class="co">USC Marshall</span>
+              <span class="role">Peer Career Advisor – Tech</span>
+            </span>
+          </span>
+          <span class="right">Aug 2025</span>
+        </a>
+      </li>
+
       <li>
         <a class="row" href="https://www.amazon.jobs/content/en/teams/devices-and-services/lab126" target="_blank" rel="noopener" aria-label="Amazon">
           <span class="left">
@@ -63,6 +70,19 @@
             </span>
           </span>
           <span class="right">2025</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://www.apple.com/careers/us/work-at-apple/students.html" target="_blank" rel="noopener" aria-label="Apple">
+          <span class="left">
+            <img class="logo" src="images/logos/apple.svg" alt="">
+            <span class="meta">
+              <span class="co">Apple</span>
+              <span class="role">Product Management Intern</span>
+            </span>
+          </span>
+          <span class="right">Aug 2023–Jan 2024</span>
         </a>
       </li>
 
@@ -91,20 +111,126 @@
           <span class="right">2023</span>
         </a>
       </li>
+
+      <!-- (Optional) keep Quokka if you want it under Work -->
+      <li>
+        <a class="row" href="decks/quokka.pdf" target="_blank" rel="noopener" aria-label="Quokka Brew">
+          <span class="left">
+            <img class="logo" src="images/logos/quokka.svg" alt="">
+            <span class="meta">
+              <span class="co">Quokka Brew</span>
+              <span class="role">Project Manager</span>
+            </span>
+          </span>
+          <span class="right">Dec 2023–Apr 2024</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="Los Angeles Rams">
+          <span class="left">
+            <img class="logo" src="images/logos/rams.svg" alt="">
+            <span class="meta">
+              <span class="co">Los Angeles Rams</span>
+              <span class="role">Data &amp; Systems Analyst – Intern</span>
+            </span>
+          </span>
+          <span class="right">Jun–Aug 2021</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="LA Conservation Corps">
+          <span class="left">
+            <img class="logo" src="images/logos/la-cc.svg" alt="">
+            <span class="meta">
+              <span class="co">LA Conservation Corps</span>
+              <span class="role">Project Lead</span>
+            </span>
+          </span>
+          <span class="right">Dec 2019–May 2020</span>
+        </a>
+      </li>
     </ul>
 
+    <!-- INVOLVEMENTS -->
     <h2 class="page-title" style="margin-top:28px;">Involvements</h2>
-    <ul class="list" aria-label="Involvements">
+    <ul class="list" aria-label="Student & community involvement">
       <li>
         <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group">
           <span class="left">
             <img class="logo" src="images/logos/usc.svg" alt="">
             <span class="meta">
-              <span class="co">Business Technology Group</span>
+              <span class="co">Business Technology Group (USC)</span>
               <span class="role">VP of Projects</span>
             </span>
           </span>
           <span class="right">2024–Present</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
+          <span class="left">
+            <img class="logo" src="images/logos/isa.svg" alt="">
+            <span class="meta">
+              <span class="co">International Student Assembly</span>
+              <span class="role">Advocacy &amp; Program Manager Intern</span>
+            </span>
+          </span>
+          <span class="right">2023–2024</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
+          <span class="left">
+            <img class="logo" src="images/logos/lbsa.svg" alt="">
+            <span class="meta">
+              <span class="co">Latino Business Student Association</span>
+              <span class="role">Member</span>
+            </span>
+          </span>
+          <span class="right">2023–2025</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First Generation Student Center">
+          <span class="left">
+            <img class="logo" src="images/logos/usc-firstgen.svg" alt="">
+            <span class="meta">
+              <span class="co">USC First-Generation Student Center</span>
+              <span class="role">Program Manager</span>
+            </span>
+          </span>
+          <span class="right">2023–2025</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://partnershipla.org/who-we-are/" target="_blank" rel="noopener" aria-label="The LA Partnership">
+          <span class="left">
+            <img class="logo" src="images/logos/partnershipla.svg" alt="">
+            <span class="meta">
+              <span class="co">The LA Partnership</span>
+              <span class="role">Policy Advisory Board Member</span>
+            </span>
+          </span>
+          <span class="right">2021–2022</span>
+        </a>
+      </li>
+
+      <li>
+        <a class="row" href="https://worldfitforkids.org/" target="_blank" rel="noopener" aria-label="A World Fit For Kids">
+          <span class="left">
+            <img class="logo" src="images/logos/wffk.svg" alt="">
+            <span class="meta">
+              <span class="co">A World Fit For Kids</span>
+              <span class="role">Strategy Consultant</span>
+            </span>
+          </span>
+          <span class="right">2022–2023</span>
         </a>
       </li>
 
@@ -130,3 +256,4 @@
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
