--- a/work.html
+++ b/work.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work · Jan Arroyo</title>
+  <!-- keep your global css for nav/base layout -->
   <link href="styles.css" rel="stylesheet" />
 
-  <!-- Work-page-only styles (kept local per your request) -->
+  <!-- Work-page-only styles (local as requested) -->
   <style>
     .container{max-width:960px;margin:0 auto;padding:0 16px;}
     .page-title{font-size:22px;margin:28px 0 14px;}
+
     /* clean list with dotted separators + full-row links */
     .list{margin:8px 0 0;padding:0;list-style:none;}
     .row{
@@ -25,6 +27,7 @@
     .role{color:#6b7280;font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
     .right{color:#7a7f87;font-size:13px;white-space:nowrap;margin-left:auto;}
     @media (max-width:560px){ .role{display:none;} }
+
     footer .container{padding:24px 0;color:#7a7f87;font-size:14px;}
   </style>
 </head>
@@ -43,14 +46,14 @@
   </nav>
 
   <main class="container">
-    <!-- WORK -->
+    <!-- WORK (newest → oldest) -->
     <h1 class="page-title">Work</h1>
     <ul class="list" aria-label="Work experience">
-      <!-- New: USC Marshall PCA Tech (no link provided yet; add when you have one) -->
+      <!-- USC Marshall PCA Tech (no link provided) -->
       <li>
-        <a class="row" href="#" aria-label="USC Marshall Peer Career Advisor Tech">
+        <a class="row" href="#" aria-label="USC Marshall Peer Career Advisor – Tech">
           <span class="left">
-            <img class="logo" src="images/logos/usc-marshall.svg" alt="">
+            <img class="logo" src="images/Marshall.JPG" alt="">
             <span class="meta">
               <span class="co">USC Marshall</span>
               <span class="role">Peer Career Advisor – Tech</span>
@@ -60,23 +63,39 @@
         </a>
       </li>
 
+      <!-- Amazon -->
       <li>
         <a class="row" href="https://www.amazon.jobs/content/en/teams/devices-and-services/lab126" target="_blank" rel="noopener" aria-label="Amazon">
           <span class="left">
-            <img class="logo" src="images/logos/amazon.svg" alt="">
+            <img class="logo" src="images/Amazon.JPG" alt="">
             <span class="meta">
               <span class="co">Amazon</span>
               <span class="role">Technical Program Manager Intern</span>
             </span>
           </span>
-          <span class="right">2025</span>
+          <span class="right">May–Aug 2025</span>
         </a>
       </li>
 
+      <!-- Accenture -->
+      <li>
+        <a class="row" href="https://www.accenture.com/us-en/services/ecosystem-partners/microsoft" target="_blank" rel="noopener" aria-label="Accenture">
+          <span class="left">
+            <img class="logo" src="images/Accenture.JPG" alt="">
+            <span class="meta">
+              <span class="co">Accenture</span>
+              <span class="role">Strategy Tech Apps &amp; Dev Analyst Intern</span>
+            </span>
+          </span>
+          <span class="right">Jun–Aug 2024</span>
+        </a>
+      </li>
+
+      <!-- Apple -->
       <li>
         <a class="row" href="https://www.apple.com/careers/us/work-at-apple/students.html" target="_blank" rel="noopener" aria-label="Apple">
           <span class="left">
-            <img class="logo" src="images/logos/apple.svg" alt="">
+            <img class="logo" src="images/Apple.JPG" alt="">
             <span class="meta">
               <span class="co">Apple</span>
               <span class="role">Product Management Intern</span>
@@ -86,50 +105,39 @@
         </a>
       </li>
 
-      <li>
-        <a class="row" href="https://www.accenture.com/us-en/services/ecosystem-partners/microsoft" target="_blank" rel="noopener" aria-label="Accenture">
-          <span class="left">
-            <img class="logo" src="images/logos/accenture.svg" alt="">
-            <span class="meta">
-              <span class="co">Accenture</span>
-              <span class="role">Strategy Tech Apps &amp; Dev Analyst Intern</span>
-            </span>
-          </span>
-          <span class="right">2024</span>
-        </a>
-      </li>
-
+      <!-- Microsoft -->
       <li>
         <a class="row" href="https://www.microsoft.com/en-us/modernfinance/digitaltransformation.aspx" target="_blank" rel="noopener" aria-label="Microsoft">
           <span class="left">
-            <img class="logo" src="images/logos/microsoft.svg" alt="">
+            <img class="logo" src="images/Microsoft.JPG" alt="">
             <span class="meta">
               <span class="co">Microsoft</span>
               <span class="role">Finance Data Analyst Intern</span>
             </span>
           </span>
-          <span class="right">2023</span>
+          <span class="right">May–Aug 2023</span>
         </a>
       </li>
 
-      <!-- (Optional) keep Quokka if you want it under Work -->
+      <!-- A World Fit For Kids (moved to Work) -->
       <li>
-        <a class="row" href="decks/quokka.pdf" target="_blank" rel="noopener" aria-label="Quokka Brew">
+        <a class="row" href="https://worldfitforkids.org/" target="_blank" rel="noopener" aria-label="A World Fit For Kids">
           <span class="left">
-            <img class="logo" src="images/logos/quokka.svg" alt="">
+            <img class="logo" src="images/A-World-Fit-for-Kids.JPG" alt="">
             <span class="meta">
-              <span class="co">Quokka Brew</span>
-              <span class="role">Project Manager</span>
+              <span class="co">A World Fit For Kids</span>
+              <span class="role">Strategy Consultant</span>
             </span>
           </span>
-          <span class="right">Dec 2023–Apr 2024</span>
+          <span class="right">2022–2023</span>
         </a>
       </li>
 
+      <!-- LA Rams -->
       <li>
         <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="Los Angeles Rams">
           <span class="left">
-            <img class="logo" src="images/logos/rams.svg" alt="">
+            <img class="logo" src="images/LARAMS.JPG" alt="">
             <span class="meta">
               <span class="co">Los Angeles Rams</span>
               <span class="role">Data &amp; Systems Analyst – Intern</span>
@@ -139,10 +147,11 @@
         </a>
       </li>
 
+      <!-- LA Conservation Corps -->
       <li>
         <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="LA Conservation Corps">
           <span class="left">
-            <img class="logo" src="images/logos/la-cc.svg" alt="">
+            <img class="logo" src="images/LACC.JPG" alt="">
             <span class="meta">
               <span class="co">LA Conservation Corps</span>
               <span class="role">Project Lead</span>
@@ -153,13 +162,14 @@
       </li>
     </ul>
 
-    <!-- INVOLVEMENTS -->
+    <!-- INVOLVEMENTS (newest/ongoing first) -->
     <h2 class="page-title" style="margin-top:28px;">Involvements</h2>
     <ul class="list" aria-label="Student & community involvement">
+      <!-- BTG -->
       <li>
-        <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group">
+        <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group (USC)">
           <span class="left">
-            <img class="logo" src="images/logos/usc.svg" alt="">
+            <img class="logo" src="images/BTG.JPG" alt="">
             <span class="meta">
               <span class="co">Business Technology Group (USC)</span>
               <span class="role">VP of Projects</span>
@@ -169,36 +179,25 @@
         </a>
       </li>
 
+      <!-- EY CMAP -->
       <li>
-        <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
+        <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
           <span class="left">
-            <img class="logo" src="images/logos/isa.svg" alt="">
+            <img class="logo" src="images/EY.JPG" alt="">
             <span class="meta">
-              <span class="co">International Student Assembly</span>
-              <span class="role">Advocacy &amp; Program Manager Intern</span>
+              <span class="co">EY CMAP</span>
+              <span class="role">Education Strategy Consultant</span>
             </span>
           </span>
-          <span class="right">2023–2024</span>
+          <span class="right">2023–Present</span>
         </a>
       </li>
 
+      <!-- USC First-Gen Student Center -->
       <li>
-        <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
+        <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First-Generation Student Center">
           <span class="left">
-            <img class="logo" src="images/logos/lbsa.svg" alt="">
-            <span class="meta">
-              <span class="co">Latino Business Student Association</span>
-              <span class="role">Member</span>
-            </span>
-          </span>
-          <span class="right">2023–2025</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First Generation Student Center">
-          <span class="left">
-            <img class="logo" src="images/logos/usc-firstgen.svg" alt="">
+            <img class="logo" src="images/FGSA.JPG" alt="">
             <span class="meta">
               <span class="co">USC First-Generation Student Center</span>
               <span class="role">Program Manager</span>
@@ -208,42 +207,45 @@
         </a>
       </li>
 
+      <!-- LBSA -->
+      <li>
+        <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
+          <span class="left">
+            <img class="logo" src="images/LBSA.JPG" alt="">
+            <span class="meta">
+              <span class="co">Latino Business Student Association</span>
+              <span class="role">Member</span>
+            </span>
+          </span>
+          <span class="right">2023–2025</span>
+        </a>
+      </li>
+
+      <!-- ISA -->
+      <li>
+        <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
+          <span class="left">
+            <img class="logo" src="images/ISA.JPG" alt="">
+            <span class="meta">
+              <span class="co">International Student Assembly</span>
+              <span class="role">Advocacy &amp; Program Manager Intern</span>
+            </span>
+          </span>
+          <span class="right">2023–2024</span>
+        </a>
+      </li>
+
+      <!-- The LA Partnership -->
       <li>
         <a class="row" href="https://partnershipla.org/who-we-are/" target="_blank" rel="noopener" aria-label="The LA Partnership">
           <span class="left">
-            <img class="logo" src="images/logos/partnershipla.svg" alt="">
+            <img class="logo" src="images/Partnership.JPG" alt="">
             <span class="meta">
               <span class="co">The LA Partnership</span>
               <span class="role">Policy Advisory Board Member</span>
             </span>
           </span>
           <span class="right">2021–2022</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="row" href="https://worldfitforkids.org/" target="_blank" rel="noopener" aria-label="A World Fit For Kids">
-          <span class="left">
-            <img class="logo" src="images/logos/wffk.svg" alt="">
-            <span class="meta">
-              <span class="co">A World Fit For Kids</span>
-              <span class="role">Strategy Consultant</span>
-            </span>
-          </span>
-          <span class="right">2022–2023</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
-          <span class="left">
-            <img class="logo" src="images/logos/ey.svg" alt="">
-            <span class="meta">
-              <span class="co">EY CMAP</span>
-              <span class="role">Education Strategy Consultant</span>
-            </span>
-          </span>
-          <span class="right">2023–Present</span>
         </a>
       </li>
     </ul>
